...
                    android:text="@string/title_main"
                    android:textSize="20sp" />

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/coordinatorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar">

                <FrameLayout
                    android:id="@+id/content_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/color_green"
                    app:fabSize="normal"
...
