...
    <string name="drawer_title2">drawer_title2</string>
    <string name="all_task_title">All Tasks</string>
    <string name="taskdetail_title">task detail title</string>
    <string name="add_task_dialog">Add Task</string>
    <string name="add_title">标题</string>
    <string name="add_description">描述</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="addtask_title">Add Task</string>
    <string name="open_string">open</string>
    <string name="close_string">close</string>
    <string name="title_sync">sync</string>
    <string name="item_sync">sync</string>
...
